--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       background: #f5f7fa;
       margin: 0;
-      padding: 20px;
+      padding: 0px 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
-    h1 {
-      margin-bottom: 20px;
-      font-size: 2rem;
-      color: #2c3e50;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-content: center;
+      width: 100%;
+
     }
 
     .section {
@@ -44,7 +46,7 @@
       flex-wrap: wrap;
     }
 
-    button {
+    .playButton {
       flex: 1 1 calc(33.333% - 10px);
       background: #3498db;
       border: none;
@@ -118,8 +120,13 @@
   </style>
 </head>
 <body>
-
-  <h1>Practicar Japonés</h1>
+  <header>
+    Japanaap
+    <button onclick="window.location.href='catsAlbum.html'">
+      Álbum de Gatos 🐱
+    </button>
+  </header>
+  
 
   <div class="section" id="hiraganaSection">
     <div class="section-title">Hiragana</div>
