--- a/index.html
+++ b/index.html
@@ -331,13 +331,20 @@ function pillsCompleted(containerId, symbols, total) {
   }
 }
 
+const audioPills = new Audio("./sounds/magic-chime-03.mp3");
+audioPills.preload = "auto";
+audioPills.load();
+const audioPrize = new Audio("./sounds/magic-chime-07.mp3");
+audioPrize.preload = "auto";
+audioPrize.load();
+
+
 function animatePillCompletion(symbols, containerId, total, completedBtn, playBtn) {
   const container = document.getElementById(containerId);
   container.style.position = "relative";
 
   const pills = container.querySelectorAll('.pill-fill');
 
-    const audioPills = new Audio("./sounds/magic-chime-03.mp3");
     audioPills.play();
 
     let lastTimeout = 0;
@@ -376,7 +383,7 @@ function animatePillCompletion(symbols, containerId, total, completedBtn, playBt
       completedBtn.style.background = "gold";
       completedBtn.style.opacity = 0;
       setTimeout(() => {
-        const audioPrize = new Audio("./sounds/magic-chime-07.mp3");
+        
         audioPrize.play();
       }, 800);
 
