--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </head>
 <body>
   <header>
-    Japanaap
+    Japanaap V0.0.1
     <button onclick="window.location.href='catsAlbum.html'">
       Álbum de Gatos 🐱
     </button>
