--- a/playGround.html
+++ b/playGround.html
@@ -35,6 +35,7 @@
   <script>
     const params = new URLSearchParams(window.location.search);
     const play = params.get("play");
+    const playingLevel = params.get("level");
 
     if (play === "hiraganaList") {
       quizList = hiraganaList || [];
@@ -47,6 +48,23 @@
     } else {
       console.error("No se ha especificado un tipo de juego válido");
     }
+
+    if (playingLevel != undefined) {
+    } else {
+      console.error("No se ha especificado un nivel de juego válido");
+    }
+
+    filteredQuizList = quizList["levels"][playingLevel]["items"];
+
+    // Barajar la lista filtrada
+    function shuffle(array) {
+      for (let i = array.length -1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
+    shuffle(filteredQuizList);
+
   </script>
   <script src="js/quizLogic.js"></script>
 </body>
